# p2sync

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
crates/p2sync/: Cargo.toml
crates/p2sync-core/: Cargo.toml
crates/p2sync-core/src/: chunk.rs  config.rs  conflict.rs  index.rs  lib.rs  merkle.rs  util.rs  watcher.rs
crates/p2sync-net/: Cargo.toml
crates/p2sync-net/src/: behaviour.rs  lib.rs  protocol.rs  swarm.rs  sync_engine.rs
crates/p2sync/src/: cli.rs  main.rs  tui.rs
