[package]
name = "p2sync"
description = "P2P real-time folder synchronization tool built on libp2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "p2sync"
path = "src/main.rs"

[dependencies]
p2sync-core = { workspace = true }
p2sync-net = { workspace = true }
libp2p = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
